--- a/main.html
+++ b/main.html
@@ -3,11 +3,29 @@
 <html>
 
 <head>
+	<title>Shopping or Holiday</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+
+
+	      <h3>Shopping List</h3>
+            <ol type="1">
+                <li data-ns-test="shoppingList"> GT -650 </li> 
+                <li data-ns-test="shoppingList"> RANGE ROVER </li>
+                <li data-ns-test="shoppingList"> CRICKET BAT </li>
+            </ol>
+    
+        <h3> Holiday List </h3>
+
+             <ul type="square">
+                <li data-ns-test="shoppingList"> KASHMIR </li>
+                <li data-ns-test="shoppingList"> KEDARNATH </li>
+                <li data-ns-test="shoppingList"> SRILANKA </li>
+
+            </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
