--- a/main.html
+++ b/main.html
@@ -21,9 +21,9 @@
         
 
              <ul type="square">
-                <li data-ns-test="shoppingList"> KASHMIR </li>
-                <li data-ns-test="shoppingList"> KEDARNATH </li>
-                <li data-ns-test="shoppingList"> SRILANKA </li>
+                <li data-ns-test="holidayList"> KASHMIR </li>
+                <li data-ns-test="holidayList"> KEDARNATH </li>
+                <li data-ns-test="holidayList"> SRILANKA </li>
 
             </ul>
     <script type="text/javascript" src="./script.js">
